# arc_flask_new

./: app.py  pyproject.toml
static/css/: styles.css
static/js/: main.js
templates/: index.html
