[tool.poetry]
name = "arc-flask"
version = "0.1.0"
description = ""
authors = ["zeefeerkee <finekii@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
